--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:8000", 
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "cross-env": "^7.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
@@ -16,10 +16,9 @@
     "web-vitals": "^2.1.3"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "cross-env REACT_APP_API_ADDRESS=${API_ADDRESS} PORT=${PORT} react-scripts start",
+    "build": "cross-env REACT_APP_API_ADDRESS=${API_ADDRESS} PORT=${PORT} react-scripts build",
+    "eject": "cross-env REACT_APP_API_ADDRESS=${API_ADDRESS} PORT=${PORT} react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
