--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "web-vitals": "^2.1.3"
   },
   "scripts": {
-    "start": "cross-env REACT_APP_API_ADDRESS=${API_ADDRESS} PORT=${PORT} react-scripts start",
-    "build": "cross-env REACT_APP_API_ADDRESS=${API_ADDRESS} PORT=${PORT} react-scripts build",
-    "eject": "cross-env REACT_APP_API_ADDRESS=${API_ADDRESS} PORT=${PORT} react-scripts eject"
+    "start": "cross-env REACT_APP_API_ADDRESS=${API_ADDRESS} REACT_APP_PORT=${PORT} react-scripts start",
+    "build": "cross-env REACT_APP_API_ADDRESS=${API_ADDRESS} REACT_APP_PORT=${PORT} react-scripts build",
+    "eject": "cross-env REACT_APP_API_ADDRESS=${API_ADDRESS} REACT_APP_PORT=${PORT} react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
