--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "web-vitals": "^2.1.3"
   },
   "scripts": {
-    "start": "cross-env REACT_APP_API_ADDRESS=${API_ADDRESS} REACT_APP_PORT=${PORT} react-scripts start",
+    "start": "cross-env REACT_APP_API_ADDRESS=${API_ADDRESS} REACT_APP_PORT=${PORT} PORT=${PORT_REACT} react-scripts start",
     "build": "cross-env REACT_APP_API_ADDRESS=${API_ADDRESS} REACT_APP_PORT=${PORT} react-scripts build",
     "eject": "cross-env REACT_APP_API_ADDRESS=${API_ADDRESS} REACT_APP_PORT=${PORT} react-scripts eject"
   },
